--- a/mysite/templates/common/login.html
+++ b/mysite/templates/common/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container my-3">
-    <form method="post" action="{% url 'app:login' %}">
+    <form method="post" action="{% url 'common:login' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         <div class="mb-3">
@@ -14,7 +14,7 @@
             <input type="password" class="form-control" name="password" id="password"
                    value="{{ form.password.value|default_if_none:'' }}">
         </div>
-        <button type="submit" class="w-100 btn btn-lg btn-primary">로그인</button>
+        <button type="submit" class="btn btn-primary">로그인</button>
     </form>
 </div>
 {% endblock %}
