--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -1,14 +1,99 @@
-<!-- my_page.html -->
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '\style.css' %}">
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>RushHour</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Rush Hour</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <!-- Font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Protest+Revolution&display=swap" rel="stylesheet">
+
+  <!-- Demo styles -->
+  <style>
+    .swiper-slide {
+      background-position: center;
+      background-size: cover;
+      width: 300px;
+      height: 300px;
+    }
+  </style>
 </head>
+
 <body>
-    <h1>Welcome to Rush Hour!</h1>
-    <h2>대충 러시아워 소개글</h2>
-    <a href="/app" >러시아워 APP </a>
-    <button>러시아워 관리자 페이지</button>
-    <!-- 페이지 내용 추가 -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <img src="{% static '\image\rh_logo_2.jpg' %}" alt="" width="30" height="24">
+          </a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="/app">APP</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Admin</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    
+    <h1></h1>
+    <h2></h2>
+    <h1>Rush HOUR</h1>
+    <h2>" 제한시간 60분, 당신은 탈출할 수 있는가 "</h2>
+    <h1></h1>
+
+  <!-- Swiper -->
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="{% static '\image\rh_beam.jpg' %} " alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="{% static '\image\rh_bait.jpg' %}" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="{% static '\image\rh_destiny.png' %}" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="{% static '\image\rh_haru.jpg' %}" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="{% static '\image\rh_she.jpg' %}" alt="">
+      </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      effect: "coverflow",
+      grabCursor: true,
+      centeredSlides: true,
+      slidesPerView: "auto",
+      coverflowEffect: {
+        rotate: 15,
+        stretch: 0,
+        depth: 300,
+        modifier: 1,
+        slideShadows: true,
+      },
+    });
+  </script>
+  <!-- Swiper JS end-->
 </body>
+
 </html>
